welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:21: error: type mismatch;
 found   : Unit
 required: String
  if(day==1) {
  ^alarmClock:14: error: type mismatch;
 found   : Unit
 required: String
  if (!vacation) {
  ^